--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
   </div>
 
 <div class="links">
-    <button onclick="window.location.href='https://github.com/xpblocker/Pblocker'">GitHub</button>
+    <button onclick="window.location.href='https://github.com/jodjsjof/Gamun/'">GitHub</button>
     <button
-onclick="window.location.href='https://discord.gg/nsvwU9ta37'">Discord</button>
+onclick="window.location.href='https://www.google.com/search?q=nerd+&sca_esv=49d605c33f00d0c3&rlz=1CAHVCY_enUS1175&udm=2&biw=1318&bih=681&ei=kOataLXGBeTVkPIPsPuFwQY&ved=0ahUKEwi1zvCa-KiPAxXkKkQIHbB9IWgQ4dUDCBE&uact=5&oq=nerd+&gs_lp=EgNpbWciBW5lcmQgMgoQABiABBhDGIoFMggQABiABBixAzIIEAAYgAQYsQMyCBAAGIAEGLEDMggQABiABBixAzIIEAAYgAQYsQMyCBAAGIAEGLEDMggQABiABBixAzIIEAAYgAQYsQMyBRAAGIAESJwPUHNY1wtwAXgAkAEAmAGQAqAB_gaqAQUzLjEuMrgBA8gBAPgBAZgCBaACqAXCAgYQABgHGB7CAgQQABgewgIKEAAYgAQYsQMYCsICBxAAGIAEGAqYAwCIBgGSBwUxLjMuMaAH3x2yBwUwLjMuMbgHhAXCBwM0LTXIB4kB&sclient=img&safe=active&ssui=on'">Discord</button>
   </div>
 
   <script>
